--- a/beepy_waiters/src/main/AndroidManifest.xml
+++ b/beepy_waiters/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Beepy">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".TableActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RestaurantActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
