--- a/beepy_waiters/build.gradle
+++ b/beepy_waiters/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation project(":BeepyCommon")
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
