--- a/beepy/build.gradle
+++ b/beepy/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.firebase:geofire-android-common:3.1.0'
 
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 }
