--- a/beepy_waiters/src/main/AndroidManifest.xml
+++ b/beepy_waiters/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uqac.dim.beepy_waiters">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,9 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Beepy">
 
-        <activity
-            android:name=".TableActivity"
-            android:exported="false" />
         <activity
             android:name=".RestaurantActivity"
             android:exported="true">
@@ -23,8 +22,18 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".TableActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
